3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/spell_effect.c: missing return value.
----
Potential fix for bug #1551307 (crash in python plugin). If event_destroy is
 not found, set del_event to NULL. And don't dare you call remove_ob on it! :)
 plugins/cfpython/cfpython_object.c
----
Fix for bug #1551371 (No-magic prevents monsters from casting spells)
 server/skill_util.c: ignore no_spell/no_magic for monsters.
----
Fix for bug #1551386 (Alchemy with unpaid items).
 include/sproto.h: new function declaration.
 server/alchemy.c: check for unpaid items/cauldrons in new function.
 server/skill_util.c: move alchemy code to other function.
Ryo 2006-09-03

server/attack.c: Store away victim_map in hit_with_arrow() - what could
  otherwise happen is that victim is a player, and killed and ends up
  on new map, so that victim->map points at the wrong map.
MSW 2006-09-02

server/swamp.c: swamp will now kill players with woodsman, but slower than
 players without that skill. Feature request #1539125 by Andreas Kirschbaum.
socket/lowlevel.c: apply patch #1550716 (Frequent crashes after client disconnects)
 courtesy Mark Kidder
Ryo 2006-09-02

server/attack.c:  Move kill_player() after we set up the pl->killer string.
  Needed just so right message is on grave stone - also prevents crashes,
  as if the hitter is poison or disease, kill_player() will remove those.
MSW 2006-08-30

lib/attackmess: Fix missing space in a 'type 17' attack message.
Alex Schultz 2006-08-30

server/player.c: Fix logic error in fire_bow and avoid unnecessary messages.
    Fixes bug #1547699.
Alex Schultz 2006-08-28

Add plugin access to move fields. Add sint64 type to plugin. 'AddExp' wrapper.