@@ -17,6 +17,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugins/common/hashtable.c: fix Win32 compilation.
 server/spell_effect.c: missing return value.
 ----
 Potential fix for bug #1551307 (crash in python plugin). If event_destroy is
